infrastructure/kubernetes/frontend/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "voronin-aleksey-12.k8s.praktikum-services.tech"
  rules:
    - host: "voronin-aleksey-12.k8s.praktikum-services.tech"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              # Заранее создан сервис типа ClusterIP
              # Он выступает в качестве бэкенда нашего Ingress
              name: frontend
              port:
                # У сервиса может быть несколько портов, указываем нужный нам
                number: 8080
